dogfooding - Convert String concatenation to Text Block